<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.CustomerLogin">

    <EditText
        android:id="@+id/etCustomerEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:hint="@string/enter_the_email" />

    <EditText
        android:id="@+id/etCustomerPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dp_10"
        android:layout_marginTop="@dimen/dp_10"
        android:hint="@string/enter_the_password" />

    <Button
        android:id="@+id/btnCustomerLogin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/login"
        android:textAllCaps="false" />

    <Button
        android:id="@+id/btnCustomerRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_40"
        android:text="@string/new_rider_register"
        android:textAllCaps="false" />

</LinearLayout>